prevents author names from wrapping mid-name

--- a/app/assets/stylesheets/partials/item-page.scss
+++ b/app/assets/stylesheets/partials/item-page.scss
@@ -71,6 +71,10 @@
     margin: 0;
   }
 
+  & .blacklight-author_ssim span {
+    white-space: nowrap;
+  }
+
   & .blacklight-author_ssim + [data-readmore-toggle] {
     background: $gray-lighter-custom;
     font-size: 12px;
